<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <!--   Ảnh đăng nhập   -->
        <ImageView
            android:layout_width="315dp"
            android:layout_height="178dp"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_login" />
        <!--    User Name   -->
        <EditText
            android:background="@drawable/custom_edt"
            android:backgroundTint="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="TODO"
            android:ems="15"
            android:hint="@string/user_name"
            android:textSize="20sp"
            tools:ignore="TextFields"
            android:textColor="#7cbce8"
            android:padding="10dp"/>
            <!--     Password -->
        <EditText
            android:background="@drawable/custom_edt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="15"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="20sp" />
<!--          Btn đăng nhập    -->
        <Button
            android:id="@+id/btnLogin"
            android:background="@drawable/custom_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="350dp"
            android:height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/login_me"
            android:textSize="20dp"/>

<!--        Quên mật khẩu    -->
        <TextView
            android:drawableLeft="@drawable/ic_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:text="@string/lost_password"
            android:textColor="#7cbce8"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

<!--      Tên    -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/luonghannhat_2050531200244"
            android:textSize="20sp"
            android:background="#FF4500"
            />

    </LinearLayout>
</RelativeLayout>