<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#7cbce8"
    tools:context=".Profile44">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7cbce8"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            android:textSize="20dp"
            android:drawableLeft="@drawable/ic_back"
            android:backgroundTint="#7cbce8"/>

        <TextView
            android:layout_weight="4"
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFAFA"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="7dp"
            android:text="@string/Profile"
            android:textSize="20dp"
            android:textStyle="bold"
            android:paddingLeft="50dp"/>

        <Button
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:paddingRight="25dp"
            android:drawableRight="@drawable/ic_setting"
            android:backgroundTint="#7cbce8"
            android:paddingBottom="20dp"/>
    </LinearLayout>

    <View
        android:id="@+id/lineview"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/back"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:background="@android:color/black"
        android:padding="0dp" />

    <ImageView
        android:id="@+id/imguser"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_below="@+id/lineview"
        android:layout_centerInParent="true"
        android:src="@drawable/img_user" />

    <EditText
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imguser"
        android:background="@null"
        android:text="@string/profile_name"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textSize="30dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp">

        <EditText
            android:id="@+id/numberFi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="70dp"
            android:background="@null"
            android:paddingLeft="2dp"
            android:text="125"
            android:textSize="40sp"
            android:textColor="@color/white"/>

    <EditText
        android:id="@+id/friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numberFi"
        android:width="70dp"
        android:paddingLeft="3dp"
        android:background="@null"
        android:text="Friends"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <View
        android:id="@+id/lineview1"
        android:layout_width="2dp"
        android:layout_height="70dp"
        android:background="@android:color/black"
        android:layout_toRightOf="@+id/numberFi"
        android:padding="20dp"
        android:layout_marginLeft="15dp" />

    <EditText
        android:id="@+id/numberfolloewrs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/lineview1"
        android:width="100dp"
        android:background="@null"
        android:paddingLeft="20dp"
        android:text="250"
        android:textSize="40sp"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_toRightOf="@id/lineview1"
        android:layout_below="@+id/numberfolloewrs"
        android:width="110dp"
        android:background="@null"
        android:paddingLeft="20dp"
        android:text="Followers"
        android:textSize="20sp"
        android:textColor="@color/white"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="22dp">
    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/followers"
        android:layout_centerInParent="true"
        android:background="@drawable/custom_edt"
        android:ems="15"
        android:paddingLeft="40dp"
        android:text="Email: mail@email.com"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_alignLeft="@id/email"
        android:layout_alignRight="@id/email"
        android:background="@drawable/custom_edt0"
        android:ems="15"
        android:paddingLeft="40dp"
        android:text="Phone: +99 999 555 222"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/skype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone"
        android:layout_alignLeft="@id/phone"
        android:layout_alignRight="@id/phone"
        android:background="@drawable/custom_edt0"
        android:ems="15"
        android:paddingLeft="40dp"
        android:text="Skype: me@007"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skype"
        android:layout_alignLeft="@id/email"
        android:layout_alignRight="@id/email"
        android:background="@drawable/custom_edt1"
        android:ems="15"
        android:paddingLeft="40dp"
        android:text="Web: cssauthor@author.com/"
        android:textSize="20sp" />
    </LinearLayout>
    <EditText
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/luonghannhat_2050531200244"
        android:layout_below="@id/web"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:background="#FF4500"
        android:textSize="20sp"
        />

</LinearLayout>